--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,4 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
-
+@layer base {
+  body {
+    @apply bg-[#ddd0c8] text-[#010101] leading-loose;
+  }
+}
