--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,7 +4,7 @@
 
 @layer base {
   body {
-    @apply bg-[#ddd0c8] text-[#010101] leading-loose font-extrabold;
+    @apply bg-[#ddd0c8] text-[#010101] leading-loose font-extrabold mx-10 xl:mx-20;
   }
 
   .input {
